syntax = "proto3";

package manager.api.user;

option go_package = ".;user";
option java_multiple_files = true;
option java_package = "manager.api.user";

import "validate/validate.proto";


message Result {
  uint32 id = 1;
  string name = 2;
}


message GetUserRequest{
 optional uint32 id = 1;
 optional string username = 2;
}

message UserObject {
  uint32 id = 1;
  string nickname = 2;
  string username = 3;
  string avatar = 4;
  optional bool status = 5;
  uint32 loggedAt = 6;
  uint32 createdAt = 7;
  uint32 updatedAt = 8;
  uint32 deptId = 9;
  uint32 jobId = 10;
  Result dept = 11;
  Result job = 12;
}

message ListUserRequest{
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional uint32 deptId = 3;
  optional uint32 jobId = 5;
  optional string username = 6;
  optional bool status = 7;
  repeated int64 loggedAts = 8;
  repeated int64 createdAts = 9;
}

message ListUserReply {
  uint32 total = 1;
  repeated UserObject list = 2;
}

message CreateUserRequest {
  string nickname = 1[(validate.rules).string = {min_len: 4,max_len: 64}];
  string username = 2[(validate.rules).string = {min_len: 6,max_len: 32}];
  uint32 deptId = 3[(validate.rules).uint32 = {gte: 1}];
  uint32 jobId = 4[(validate.rules).uint32 = {gte: 1}];
}

message CreateUserReply {
  uint32 id = 1;
}

message UpdateUserRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  optional string nickname = 2[(validate.rules).string = {min_len: 4,max_len: 64}];
  optional uint32 deptId = 3[(validate.rules).uint32 = {gte: 1}];
  optional uint32 jobId = 4[(validate.rules).uint32 = {gte: 1}];
  optional bool status = 5;
}

message UpdateUserReply {
}

message DeleteUserRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteUserReply {
}

message ResetPasswordRequest {
  uint32 id = 1;
}
